--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,12 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="TextUtils is aword counter and a character counting utility which can be used to manipulate you text in a way you want. You can remove extra spaces, copy the manipulated text as well as convert your text from UpperCase to LowerCase and LowerCase to UpperCase"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon-16x16.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <title>React App</title>
+    <title>TextUtils - Word counter | character counter | lowercase to uppercase | uppercase to lowercase</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
